1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* EMU-ELS: New implementation.

	* mcharset.el, poem.el: Fix typo.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu.el, emu-mule.el, EMU-ELS: Move code about CCL from
	emu-mule.el to pccl-om.el.

	* pccl.el: New file.

	* pccl.el: - Rename emu-e20.el to pccl-20.el.
	- Move definition of emu-x20.el to pccl-20.el.
	- Move code about CCL from emu-mule.el to pccl-om.el.

	* pccl-om.el: New file (move code about CCL from emu-mule.el).

	* pccl-20.el: New file (renamed from emu-e20.el; move definition
	of emu-x20.el to pccl-20.el; abolish emu-x20.el).

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu.el, emu-x20.el, emu-e20.el: Move function `char-category'
	from emu-e20.el and emu-x20.el to emu.el.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu.el, emu-nemacs.el, emu-latin1.el, EMU-ELS: Move definitions
	of emu-nemacs.el and emu-latin1.el to emu.el; abolish
	emu-nemacs.el and emu-latin1.el.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu.el: Modify conditions to load sub-modules.

	* emu.el, emu-e20.el: Move alias
	`insert-binary-file-contents-literally' from emu-e20.el to emu.el.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poem.el, emu.el: Move `string-as-unibyte',
	`string-as-multibyte', `char-int', `int-char' and
	`char-or-char-int-p' from emu.el to poem.el.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mcharset.el, emu.el: Move function `charsets-to-mime-charset'
	from emu.el to mcharset.el.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* emu.el, emu-x20.el, emu-nemacs.el, emu-mule.el, emu-latin1.el,
	emu-e20.el:
	  - Move `insert-binary-file-contents' from emu-e20.el,
	    emu-latin1.el, emu-mule.el, emu-nemacs.el and emu-x20.el to
	    emu.el.
	  - Move `insert-binary-file-contents-literally' from
	    emu-latin1.el, emu-mule.el, emu-nemacs.el and emu-x20.el to
	    emu.el.

1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
